apps/dozzle/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dozzle
  namespace: dozzle
spec:
  selector:
    app: dozzle
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
