apps/dozzle/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dozzle
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`logs.${DOMAIN}`)
      kind: Rule
      middlewares:
        - name: authelia-auth
          namespace: traefik
      services:
        - name: dozzle
          port: 80
          namespace: dozzle
  tls: {}
